Hacer visible el boton de gestion de usuarios si tienes el permiso correcto

--- a/harvester-app/src/framework/utils/css/moduloUsuario.css
+++ b/harvester-app/src/framework/utils/css/moduloUsuario.css
@@ -77,7 +77,7 @@
   border-color: #000000;
   border-width: 2px;
   padding: 18.7px;
-  display: flex;
+  display: none;
   flex-direction: row;
   gap: 18.7px;
   align-items: center;
@@ -85,7 +85,7 @@
   align-self: stretch;
   flex-shrink: 0;
   position: relative;
-  transition: all 0.3s ease; 
+  transition: all 0.3s ease;
 }
 
 .boton-gestion-usuario:hover {
